# personal_repo

a2_skeleton/: CMakeLists.txt  ackerman.h  controllerinterface.h  index.dox  laser.h  main.cpp  mission.h  missioninterface.h  ranger.h  rangerinterface.h  skidsteer.h  sonar.h
a2_skeleton/data/: SKIDSTEER.TXT
a2_skeleton/test/: CMakeLists.txt  test_audi_reach_goals.cpp  test_mission_obstruction.cpp  test_mission_reach_goals.cpp  test_skid_reach_goals.cpp
a3_skeleton/: mainpage.dox
a3_skeleton/data/sample/: sample_2026-05-12_22-34-33_0.db3
a3_skeleton/src/: bar.cpp  foo.cpp  laserprocessing.cpp  laserprocessing.h
a3_skeleton/test/: utest.cpp
relevant_material/week12/: A3.md  README.md  ROS2BAG.md  TUTORIAL.md
relevant_material/week12/a3_support/: CMakeLists.txt  mainpage.dox  package.xml  rosdoc2.yaml
relevant_material/week12/a3_support/config/: bag_params.yaml  qos_override.yaml
relevant_material/week12/a3_support/data/: A3_RACING.TXT  A3_SEARCH_ADV.TXT  A3_TERRAIN.TXT  A3_TERRAIN_3GOALS.TXT  A3_TERRAIN_OK.TXT  GOALS.TXT
relevant_material/week12/a3_support/src/: goals_logger.cpp  goals_publisher.cpp  simple_bag_recorder.cpp  stl_publisher.cpp  tf_static_republisher.cpp
relevant_material/week12/project_example/: CMakeLists.txt  package.xml
relevant_material/week12/project_example/src/: controller.cpp  controller.h  main_mission.cpp  main_platform.cpp  mission.cpp  mission.h  quadcopter.cpp  quadcopter.h
